# zozo-shift15m

./: .gitignore  BENCHMARK.md  CITATION.cff  DATASHEET.md  DEVELOPMENT.md  LICENSE.MIT  README.md  TASK_PROPOSAL.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: benchmark_proposal.md  task_proposal
.github/workflows/: python-tests.yml
benchmarks/: README.md  benchmark_template.py  numlikes_tabular.py  numlikes_tabular_iwerm.py  sumprices_tabular_covariate_shift.py  sumprices_tabular_iwerm_covariate_shift.py  sumprices_tabular_iwerm_target_shift.py  sumprices_tabular_target_shift.py
benchmarks/item_category_prediction/: README.md  dataset.py  figure.py  main.py  make_dataset.py  model.py
benchmarks/set_matching/: README.md
benchmarks/set_matching_pytorch/: README.md  config.py  metrics.py  model.py  test.py  train_sm.py  train_we.py
benchmarks/year_classification/: config.py  dataset.py  train.py  year_split_trainval.py
docs/: .gitignore  README.md  conf.py  datasheet.rst  faq.rst  index.rst
docs/reference/: index.rst
scripts/: README.md  download_all.sh  download_all_wo_set_testdata.sh  download_cnn_features.sh  download_item_category_prediction_catalog.sh  download_num_likes_regression.sh  download_set_matching_label.sh  download_set_matching_testdata.sh  download_shift15m_outfits.sh  download_shift15m_outfits_with_tags.sh  download_sum_prices_regression.sh  download_tarfiles.py  download_year_classification_label.sh  extract_statistics.py
shift15m/: constants.py  msgs.py
shift15m/datasets/: __init__.py  base_dataset.py  df_manipulations.py  download_tarfiles.py  feature_tar_extractor.py  (+6 more)
shift28m/: constants.py  msgs.py
tests/: test_data_loaders.py
(+50 files in other folders)
