[tool.poetry]
name = "shift28m"
version = "0.1.0"
description = "Large-scale multiobective dataset with dataset shift."
authors = ["Masanari Kimura"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.4"
sklearn = "^0.0"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
