[tool.poetry]
name = "shift15m"
version = "0.1.0"
description = "Large-scale multiobective dataset with dataset shift."
authors = ["Masanari Kimura"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.4"
sklearn = "^0.0"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
tqdm = "^4.61.1"
Sphinx = "^4.0.2"
furo = "^2021.6.24-beta.37"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
