[tool.poetry]
name = "shift15m"
version = "0.1.2"
description = "Large-scale multiobective dataset with dataset shift."
authors = ["ZOZO Research SHIFT15M Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.4"
sklearn = "^0.0"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
Sphinx = "^4.0.2"
furo = "^2021.6.24-beta.37"
torch = {version = "1.9.0", optional = true}
tqdm = "^4.62.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
autoflake = "^1.4"

[tool.poetry.extras]
pytorch = ["torch"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
